revise for actions

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: parody3
 Title: Parametric And Resistant Outlier DYtection
-Version: 1.55.0
+Version: 1.55.1
 Authors@R:
     person(given = "Vince",
            family = "Carey",
@@ -15,3 +15,4 @@ Suggests: knitr, BiocStyle, testthat, rmarkdown
 License: Artistic-2.0
 VignetteBuilder: knitr
 biocViews: MultipleComparison
+RoxygenNote: 7.2.0
